Add basic unsafe web blocker
CyRadar API (cyradar.com) from OpenFPT (openfpt.vn)

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "get-pixels": "latest",
     "google-tts-api": "latest",
     "is-there": "latest",
-    "node-dir": "latest"
+    "node-dir": "latest",
+    "request": "^2.81.0"
   }
 }
