--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "get-pixels": "latest",
     "google-tts-api": "latest",
     "is-there": "latest",
+    "mt-files-downloader": "latest",
     "node-dir": "latest",
     "request": "latest"
   }
